--- a/app/src/main/res/layout/activity_restar.xml
+++ b/app/src/main/res/layout/activity_restar.xml
@@ -2,51 +2,50 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SumarActivity">
+    tools:context=".RestarActivity">
 
     <EditText
-        android:id="@+id/editTextNumberSuma"
-        android:layout_width="284dp"
-        android:layout_height="52dp"
-        android:layout_marginTop="128dp"
+        android:id="@+id/editTxtRestar"
+        android:layout_width="217dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="92dp"
         android:ems="10"
-        android:hint="Introduzca un número para sumar"
+        android:hint="Introduce un número para restar"
         android:inputType="number"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextNumberSuma2"
-        android:layout_width="284dp"
-        android:layout_height="52dp"
-        android:layout_marginTop="44dp"
+        android:id="@+id/editTxtRestar2"
+        android:layout_width="217dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="60dp"
         android:ems="10"
-        android:hint="Introduce otro número para sumar "
+        android:hint="Introduce un numero para restar"
         android:inputType="number"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumberSuma" />
+        app:layout_constraintTop_toBottomOf="@+id/editTxtRestar" />
 
     <TextView
         android:id="@+id/txtResultadoRestar"
         android:layout_width="@dimen/LblWidth"
         android:layout_height="@dimen/lblHeight"
-        android:layout_marginTop="72dp"
-        android:textAlignment="center"
-        android:textSize="16sp"
+        android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumberSuma2" />
+        app:layout_constraintTop_toBottomOf="@+id/editTxtRestar2" />
 
     <Button
-        android:id="@+id/btnCalcularSuma"
+        android:id="@+id/btnRestar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
