--- a/app/src/main/res/layout/activity_sumar.xml
+++ b/app/src/main/res/layout/activity_sumar.xml
@@ -45,14 +45,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextNumberSuma2" />
 
-    <Button
+    <ImageButton
         android:id="@+id/btnCalcularSuma"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="Button"
+        android:layout_marginTop="64dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtResultadoRestar" />
+        app:layout_constraintTop_toBottomOf="@+id/txtResultadoRestar"
+        app:srcCompat="@drawable/signosumar" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
