--- a/app/src/main/res/layout/activity_dividir.xml
+++ b/app/src/main/res/layout/activity_dividir.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#3F51B5"
     tools:context=".DividirActivity">
 
     <EditText
@@ -12,6 +13,7 @@
         android:layout_height="@dimen/btnHeight"
         android:layout_marginTop="40dp"
         android:ems="10"
+        android:hint="Número 1"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,6 +25,7 @@
         android:layout_height="@dimen/btnHeight"
         android:layout_marginTop="28dp"
         android:ems="10"
+        android:hint="Número 2"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,6 +50,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtResDividir"
+        app:background="@null"
         app:srcCompat="@drawable/division" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
