--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#3F51B5"
     tools:context=".MainActivity">
 
     <TextView
@@ -34,6 +35,7 @@
             android:layout_height="@dimen/btnHeight"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
+            android:backgroundTint="#FF9800"
             android:text="@string/sumar"
             app:layout_constraintBottom_toTopOf="@+id/btnRestar"
             app:layout_constraintEnd_toEndOf="parent"
@@ -46,6 +48,7 @@
             android:layout_width="@dimen/btnWidth"
             android:layout_height="@dimen/btnHeight"
             android:layout_marginTop="92dp"
+            android:backgroundTint="#FF9800"
             android:text="@string/restar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -57,6 +60,7 @@
             android:layout_height="@dimen/btnHeight"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="92dp"
+            android:backgroundTint="#FF9800"
             android:text="@string/multiplicar"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -69,6 +73,7 @@
             android:layout_width="@dimen/btnWidth"
             android:layout_height="@dimen/btnHeight"
             android:layout_marginTop="15dp"
+            android:backgroundTint="#FF9800"
             android:text="@string/dividir"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.533"
